--- a/admin.html
+++ b/admin.html
@@ -22,7 +22,8 @@
         #preview { margin: 15px 0; border-radius: 15px; text-align: center; background: #fafafa; border: 2px dashed #eee; min-height: 80px; display: flex; align-items: center; justify-content: center; overflow: hidden; }
         #preview img, #preview video { max-width: 100%; border-radius: 12px; max-height: 250px; }
         .loading-spinner { display: none; text-align: center; color: var(--secondary); margin: 10px 0; }
-        .external-link-area { background: #fff5f8; padding: 10px; border-radius: 12px; border: 1px solid #ffe1e9; margin-bottom: 10px; }
+        /* ستايل إضافي لحقل الرابط */
+        .url-input-group { display: none; margin-top: 10px; border: 1px solid var(--secondary); padding: 10px; border-radius: 12px; background: #f9f4ff; }
     </style>
 </head>
 <body>
@@ -45,12 +46,7 @@
         <label>نص المنشور:</label>
         <textarea id="main-content" rows="4" placeholder="اكتبي محتوى المنشور هنا..."></textarea>
 
-        <div class="external-link-area">
-            <label><i class="fas fa-link"></i> رابط فيديو خارجي (YouTube/Drive):</label>
-            <input type="url" id="external-url" placeholder="انسخي الرابط هنا إذا وجد...">
-        </div>
-
-        <label>أو إرفاق ملف (صورة أو فيديو):</label>
+        <label>إرفاق ملف (صورة أو فيديو):</label>
         <input type="file" id="file-input" accept="video/*,image/*" onchange="handlePreview(this)">
         
         <div id="preview">
@@ -70,13 +66,18 @@
             </div>
             <div>
                 <label>نوع الملف:</label>
-                <select id="type-select">
+                <select id="type-select" onchange="toggleUrlInput()">
                     <option value="نصي">نصي فقط</option>
                     <option value="صورة">صورة</option>
                     <option value="فيديو">فيديو</option>
-                    <option value="رابط_خارجي">رابط فيديو خارجي</option>
+                    <option value="رابط">رابط خارجي (URL)</option>
                 </select>
             </div>
+        </div>
+
+        <div id="url-container" class="url-input-group">
+            <label style="color: var(--secondary);">رابط الملف الخارجي:</label>
+            <input type="url" id="external-url" placeholder="https://example.com/video.mp4">
         </div>
 
         <button class="btn btn-upload" id="upload-btn" onclick="startUpload()" style="margin-top: 15px;">
@@ -95,6 +96,13 @@
 </div>
 
 <script>
+    // وظيفة إظهار/إخفاء حقل الرابط
+    function toggleUrlInput() {
+        const type = document.getElementById('type-select').value;
+        const urlContainer = document.getElementById('url-container');
+        urlContainer.style.display = (type === 'رابط') ? 'block' : 'none';
+    }
+
     // 1. معاينة الملف وتحديد النوع تلقائياً
     function handlePreview(input) {
         const preview = document.getElementById('preview');
@@ -112,8 +120,7 @@
                 preview.innerHTML = `<img src="${url}">`;
                 typeSelect.value = 'صورة';
             }
-            // تفريغ حقل الرابط الخارجي إذا تم اختيار ملف
-            document.getElementById('external-url').value = '';
+            toggleUrlInput(); // لضمان إخفاء حقل الرابط إذا تم اختيار ملف
         }
     }
 
@@ -126,9 +133,9 @@
         const externalUrl = document.getElementById('external-url').value;
         const btn = document.getElementById('upload-btn');
 
-        // التحقق من وجود محتوى أو ملف أو رابط
+        // التحقق من المدخلات
         if (!content && !fileInput.files[0] && !externalUrl) {
-            return Swal.fire('تنبيه', 'يرجى كتابة نص، اختيار ملف، أو وضع رابط خارجي', 'warning');
+            return Swal.fire('تنبيه', 'يرجى كتابة نص أو اختيار ملف أو وضع رابط للرفع', 'warning');
         }
 
         btn.disabled = true;
@@ -136,7 +143,7 @@
 
         Swal.fire({
             title: 'جاري المعالجة...',
-            text: 'يتم الآن حفظ البيانات في قاعدة بيانات Neon',
+            text: 'يتم الآن رفع البيانات وحفظها بأقصى سرعة',
             allowOutsideClick: false,
             didOpen: () => Swal.showLoading()
         });
@@ -144,8 +151,12 @@
         const formData = new FormData();
         formData.append('content', content);
         formData.append('section', section);
-        formData.append('type', externalUrl ? 'رابط_خارجي' : type);
-        formData.append('external_url', externalUrl); // إرسال الرابط لـ Neon
+        formData.append('type', type);
+        
+        // إرسال الرابط الخارجي إذا وجد
+        if (type === 'رابط' && externalUrl) {
+            formData.append('external_url', externalUrl);
+        }
 
         if (fileInput.files[0]) {
             formData.append('file', fileInput.files[0]);
@@ -173,7 +184,7 @@
         }
     }
 
-    // 3. وظيفة الحذف
+    // 3. وظيفة الحذف الجديدة
     async function deletePost() {
         const id = document.getElementById('delete-id').value;
         if (!id) return Swal.fire('تنبيه', 'يرجى إدخال معرف المنشور (ID)', 'warning');
@@ -225,4 +236,4 @@
     }
 </script>
 </body>
-                       </html>
+                    </html>
